Creating Custom Styles with css

--- a/Bootstrap/dashboard/index.html
+++ b/Bootstrap/dashboard/index.html
@@ -157,6 +157,10 @@
                         </ul>
                     </div>
                 </nav>
+
+                <div class="container-fluid px-4">
+                    <h3>content here</h3>
+                </div>
             </div>
         </div>
         <script
