--- a/Bootstrap/dashboard/index.html
+++ b/Bootstrap/dashboard/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles.css" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -12,83 +13,55 @@
             referrerpolicy="no-referrer"
         />
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="style.css" />
         <title>B5 Dashboard</title>
     </head>
+
     <body>
         <div class="d-flex" id="wrapper">
             <!-- Sidebar Starts Here -->
 
             <div class="bg-white">
                 <div
-                    class="Sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase"
+                    class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase"
                 >
                     <i class="fas fa-user-secret me-2"></i> Codersbite
                 </div>
-
-                <div>
-                    <div class="list-group list-group-flush my-3">
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent second-text active"
-                        >
-                            <i class="fas fa-tachometer-alt me-2"></i>Dashboard
-                        </a>
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
-                        >
-                            <i class="fas fa-project-diagram me-2"></i>Projects
-                        </a>
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
-                        >
-                            <i class="fas fa-chart-line me-2"></i>Analytics
-                        </a>
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
-                        >
-                            <i class="fas fa-paperclip me-2"></i>Reports
-                        </a>
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
-                        >
-                            <i class="fas fa-shopping-cart me-2"></i>Store
-                            Manager
-                        </a>
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
-                        >
-                            <i class="fas fa-gift me-2"></i>Products
-                        </a>
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
-                        >
-                            <i class="fas fa-comment-dots me-2"></i>Chat
-                        </a>
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
-                        >
-                            <i class="fas fa-map-marker-alt me-2"></i>Outlet
-                        </a>
-                        <a
-                            href="#"
-                            class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"
-                        >
-                            <i class="fas fa-door-open me-2"></i>Logout
-                        </a>
-                    </div>
+                <div class="list-group list-group-flush my-3">
+                    <a
+                        href="#"
+                        class="list-group-item list-group-item-action bg-transparent second-text active"
+                    >
+                        <i class="fas fa-tachometer-alt me-2"></i> Dashboard
+                    </a>
+                    <a
+                        href="#"
+                        class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
+                    >
+                        <i class="fas fa-project-diagram me-2"></i> Projects
+                    </a>
+                    <a
+                        href="#"
+                        class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
+                    >
+                        <i class="fas fa-chart-line me-2"></i> Analytics
+                    </a>
+                    <a
+                        href="#"
+                        class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
+                    >
+                        <i class="fas fa-paperclip me-2"></i> Reports
+                    </a>
+                    <a
+                        href="#"
+                        class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"
+                    >
+                        <i class="fas fa-project-diagram me-2"></i> Logout
+                    </a>
                 </div>
             </div>
 
@@ -116,13 +89,12 @@
                     >
                         <span class="navbar-toggler-icon"></span>
                     </button>
-
                     <div
-                        class="collapse navbar-collapse"
+                        class="collpse navbar-collapse"
                         id="navbarSupportedContent"
                     >
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item-dropdown">
+                            <li class="nav-item dropdown">
                                 <a
                                     href="#"
                                     class="nav-link dropdown-toggle second-text fw-bold"
@@ -131,7 +103,7 @@
                                     data-bs-toggle="dropdown"
                                     aria-expanded="false"
                                 >
-                                    <i class="fas fa-user me-2"></i>John Doe
+                                    <i class="fas fa-user me-2"></i> John Doe
                                 </a>
                                 <ul
                                     class="dropdown-menu"
@@ -141,13 +113,9 @@
                                         <a href="#" class="dropdown-item"
                                             >Profile</a
                                         >
-                                    </li>
-                                    <li>
                                         <a href="#" class="dropdown-item"
                                             >Settings</a
                                         >
-                                    </li>
-                                    <li>
                                         <a href="#" class="dropdown-item"
                                             >Logout</a
                                         >
@@ -157,21 +125,11 @@
                         </ul>
                     </div>
                 </nav>
-
-                <div class="container-fluid px-4">
-                    <h3>content here</h3>
-                </div>
             </div>
         </div>
         <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-            crossorigin="anonymous"
-        ></script>
-
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"
         ></script>
     </body>
