--- a/Bootstrap/dashboard/index.html
+++ b/Bootstrap/dashboard/index.html
@@ -125,8 +125,92 @@
                         </ul>
                     </div>
                 </nav>
+                <!-- Navbar Ends Here -->
+                <!-- Main Content Starts Here -->
                 <div class="container-fluid px-4">
-                    <h3>Content Here</h3>
+                    <div class="row g-3 my-2">
+                        <div class="col-md-3">
+                            <div
+                                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
+                            >
+                                <h3 class="fs-2">720</h3>
+                                <p class="fs-5">Products</p>
+                                <i
+                                    class="fas fa-gift fs-1 primary-text border rounded-full secondary-bg p-3"
+                                ></i>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div
+                                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
+                            >
+                                <h3 class="fs-2">4920</h3>
+                                <p class="fs-5">Sales</p>
+                                <i
+                                    class="fas fa-hand-holding fs-1 primary-text border rounded-full secondary-bg p-3"
+                                ></i>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div
+                                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
+                            >
+                                <h3 class="fs-2">3899</h3>
+                                <p class="fs-5">Deliveries</p>
+                                <i
+                                    class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"
+                                ></i>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div
+                                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
+                            >
+                                <h3 class="fs-2">25%</h3>
+                                <p class="fs-5">Increase</p>
+                                <i
+                                    class="fas fa-chart-line fs-1 primary-text border rounded-full secondary-bg p-3"
+                                ></i>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Table Data -->
+                    <div class="row my-5">
+                        <h3 class="fs-4 mb-3">Recent Orders</h3>
+                        <div class="col">
+                            <table
+                                class="table bg-white rounded shadow-sm table-hover"
+                            >
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">First</th>
+                                        <th scope="col">Last</th>
+                                        <th scope="col">Handle</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                        <td>@mdo</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">3</th>
+                                        <td colspan="2">Larry the Bird</td>
+                                        <td>@twitter</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
